background dark mode fashion buttons fixed

--- a/src/styles/implatform-fashion-theme-styles.scss
+++ b/src/styles/implatform-fashion-theme-styles.scss
@@ -283,6 +283,7 @@ $fashion-dark-theme-foreground: (base: rgba(white, 0.6),
   $background: map-get($theme, background);
   $foreground: map-get($theme, foreground);
   $sidenav-background-color: mat-color($background, status-bar);
+  $is-dark-theme: map-get($theme, is-dark);
 
   .o-app-header {
     nav {
@@ -532,7 +533,15 @@ $fashion-dark-theme-foreground: (base: rgba(white, 0.6),
     &.mat-button-base[ng-reflect-dialog-result="0"],
     &.mat-button-base[ng-reflect-dialog-result="true"] {
       color: mat-color($primary, 500);
-      background-color: #ffffff;
+
+      @if $is-dark-theme {
+        background-color: transparent;
+      }
+
+      @else {
+        background-color: #ffffff;
+      }
+
       border-color: mat-color($foreground, text, 0.32);
 
       &:hover,
@@ -551,7 +560,15 @@ $fashion-dark-theme-foreground: (base: rgba(white, 0.6),
     &.mat-button-base[ng-reflect-dialog-result="1"],
     &.mat-button-base[ng-reflect-dialog-result="false"] {
       color: mat-color($foreground, text);
-      background-color: #ffffff;
+
+      @if $is-dark-theme {
+        background-color: transparent;
+      }
+
+      @else {
+        background-color: #ffffff;
+      }
+
       border-color: mat-color($foreground, text, 0.32);
 
       &:hover,
